internal/outline/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outline
spec:
  replicas: 1
  selector:
    matchLabels:
      app: outline
  template:
    metadata:
      labels:
        app: outline
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9000"
    spec:
      containers:
        - name: outline
          image: outlinewiki/outline:0.66.3
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 4Gi
              cpu: "1"
            requests:
              memory: 1Gi
              cpu: 100m
          env: &env
            - name: URL
              value: https://outline.poketwo.io
            - name: PORT
              value: "3000"

            - name: SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: outline
                  key: secret-key
            - name: UTILS_SECRET
              valueFrom:
                secretKeyRef:
                  name: outline
                  key: utils-secret

            - name: REDIS_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: outline-redis
                  key: password
            - name: REDIS_URL
              value: redis://:$(REDIS_PASSWORD)@outline-redis-master:6379

            - name: DATABASE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: outline.poketwo-outline.credentials.postgresql.acid.zalan.do
                  key: password
            - name: DATABASE_URL
              value: postgres://outline:$(DATABASE_PASSWORD)@poketwo-outline:5432/outline
            - name: DATABASE_URL_TEST
              value: postgres://outline:$(DATABASE_PASSWORD)@poketwo-outline:5432/outline-test

            - name: AWS_ACCESS_KEY_ID
              valueFrom:
                secretKeyRef:
                  name: outline-bucket
                  key: AWS_ACCESS_KEY_ID
            - name: AWS_SECRET_ACCESS_KEY
              valueFrom:
                secretKeyRef:
                  name: outline-bucket
                  key: AWS_SECRET_ACCESS_KEY
            - name: AWS_S3_UPLOAD_BUCKET_NAME
              valueFrom:
                configMapKeyRef:
                  name: outline-bucket
                  key: BUCKET_NAME
            - name: AWS_S3_UPLOAD_BUCKET_URL
              value: https://rgw.poketwo.io
            - name: AWS_S3_ACL
              value: private

            - name: OIDC_CLIENT_ID
              value: outline.poketwo.io
            - name: OIDC_CLIENT_SECRET
              valueFrom:
                secretKeyRef:
                  name: outline
                  key: oidc-client-secret
            - name: OIDC_AUTH_URI
              value: https://auth.poketwo.io/realms/poketwo.net/protocol/openid-connect/auth
            - name: OIDC_TOKEN_URI
              value: https://auth.poketwo.io/realms/poketwo.net/protocol/openid-connect/token
            - name: OIDC_USERINFO_URI
              value: https://auth.poketwo.io/realms/poketwo.net/protocol/openid-connect/userinfo
            - name: OIDC_DISPLAY_NAME
              value: Pokétwo
